# space

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/api/: filters.py  mixins.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
src/config/: settings.py  urls.py
src/tests/: conftest.py  test_users.py
src/users/: models.py
src/users/migrations/: 0001_initial.py  0002_user_deleted_alter_user_gender.py
